Fix horizontal scroll in portrait orientation → v2.1.4
Fixes #162

--- a/src/sass/_screen-play.scss
+++ b/src/sass/_screen-play.scss
@@ -208,6 +208,8 @@ $fixedHeaderHeight: $fixedHeaderSize * $lineHeight;
     .progress {
       position: absolute;
       left: $margins;
+      width: calc(100vw - #{$margins});
+
       // because of https://github.com/rodneyrehm/viewport-units-buggyfill/issues/13#issuecomment-74841617 ?
       height: auto !important;
 
